[package]
name = "agbrs_flash"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "GPL-3.0-or-later"
repository = "https://github.com/kouta-kun/agbrs_flash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.11.1"

# By default, `serde` has the `std` feature enabled, which makes it unsuitable for embedded targets
# disabling default-features fixes this
serde = { version = "1.0.143", default-features = false, features = ["derive", "alloc"] }
serde_derive = { version = "1.0.143" }
postcard = { version = "1.0.2", features = ["alloc"], default-features = false }
