[package]
name = "agbrs_flash"
description = "Crate for persisting game data to a GBA cartridge using Rust"
version = "0.3.0"
edition = "2021"
resolver = "2"
license = "GPL-3.0-or-later"
repository = "https://github.com/kouta-kun/agbrs_flash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.20.4"

# By default, `serde` has the `std` feature enabled, which makes it unsuitable for embedded targets
# disabling default-features fixes this
serde = { version = "~1", default-features = false, features = ["derive", "alloc"] }
serde_derive = { version = "~1" }
postcard = { version = "~1", features = ["alloc"], default-features = false }
