[package]
name = "example"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agbrs_flash = {path = "../"}

agb = "0.11.1"
serde = { version = "1.0.143", default-features = false, features = ["derive","alloc"] }