[package]
name = "example"
version = "0.2.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agbrs_flash = {path = "../"}

agb = "0.20.4"
serde = { version = "~1", default-features = false, features = ["derive","alloc"] }
serde_derive = { version = "~1" }
